[tool.poetry]
name = "SOS_LLM"
version = "0.1.0"
description = "Intelligent market model based on google deepmind open source model training."
authors = [
  "Solana-Swap <support@solanaswap.co>" 
]
python-version = "3.12"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
absl-py = "^2.1.0"
sentencepiece = "^0.2.0"
flax = "=0.9.0"
pytest = {version = "^8.0.0", optional = true}

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
